--- a/foodster/templates/base.html
+++ b/foodster/templates/base.html
@@ -7,6 +7,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
+    <style>
+        a { 
+            text-decoration: none;
+        } 
+    </style>
     <link rel="stylesheet"
           href="{% block main_css %}/static/pages/index.css{% endblock main_css %}">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon"/>
@@ -20,13 +25,10 @@
     {% endblock %}
 </div>
 {% block content %}
-
 {% endblock content %}
 </main>
 
 {% include 'includes/footer.html' %}
-
-
 {% block js %}
     <script src="/static/js/components/MainCards.js"></script>
 
