--- a/foodster/recipes/templates/author_recipes.html
+++ b/foodster/recipes/templates/author_recipes.html
@@ -10,14 +10,14 @@
 
 {% block content %}
     {% load sub_funcs %}
-    <main class="main container">
         {% csrf_token %}
-        
+        {% if request.user != author %}
         <div class="author-subscribe" data-author="{{ author.id }}">
             <p style="padding: 0 0 2em 0;">
                         {% include 'includes/follow_button.html' with author=author %}
             </p>
         </div>
+        {% endif %}
         <div class="card-list">
             {% for item in page %}
                 {% include "includes/item_card.html" with item=item %}
@@ -26,7 +26,6 @@
         {% if page %}
             {% include "includes/pagination.html" with items=page paginator=paginator %}
         {% endif %}
-    </main>
 {% endblock %}
 
 {% block js %}
