--- a/foodster/recipes/templates/form_recipe.html
+++ b/foodster/recipes/templates/form_recipe.html
@@ -8,18 +8,14 @@
     <h1 class="main__title">{% if edit %}Редактировать рецепт{% else %}Создать рецепт{% endif %}</h1>
 {% endblock %}
 {% block content %}
-    <main class="main container">
         <span class="form-container">
             <form class="form" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-                    {% for error in form.errors %}
-                        {{ error }}
-                    {% endfor %}
             <div class="form__group">
                 <label for="id_name" class="form__label">Название рецепта</label>
                 <div class="form__field-group">
                     <input type="text" id="id_name" name="title" class="form__input">
-                    <span class="form__error"></span>
+                    <span class="form__error">{{ form.title.errors }}</span>
                 </div>
             </div>
             <div class="form__group">
@@ -36,7 +32,7 @@
                             </div>
                         {% endfor %}
                     </div>
-                    <span class="form__error"></span>
+                    <span class="form__error">{{ form.tags.errors }}</span>
                 </div>
             </div>
             <div class="form__group">
@@ -54,7 +50,7 @@
 
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                    <span class="form__error"></span>
+                    <span class="form__error">{{ form.ingredients.errors }}</span>
                 </div>
             </div>
             <div class="form__group">
@@ -62,21 +58,21 @@
                 <div class="form__field-group form__field-group_time">
                     <input type="text" id="id_time" name="cooktime" class="form__input">
                     <label for="id_time" class="form__label">минут</label>
-                    <span class="form__error"></span>
+                    <span class="form__error">{{ form.cooktime.errors }}</span>
                 </div>
             </div>
             <div class="form__group">
                 <label for="id_description" class="form__label">Описание</label>
                 <div class="form__field-group">
                     <textarea name="description" id="id_description" rows="8" class="form__textarea"></textarea>
-                    <span class="form__error"></span>
+                    <span class="form__error">{{ form.description.errors }}</span>
                 </div>
             </div>
             <div class="form__group">
                 <span class="form__label">Загрузить фото</span>
                 <div class="form__field-group">
                     <input type="file" name="image" id="id_file">
-                    <span class="form__error"></span>
+                    <span class="form__error">{{ form.file.errors }}</span>
                 </div>
             </div>
 
@@ -90,7 +86,6 @@
             </form>
 
         </span>
-    </main>
 {% endblock %}
 {% block js %}
     <script src="/static/js/config/config.js"></script>
