--- a/foodster/recipes/templates/includes/item_card.html
+++ b/foodster/recipes/templates/includes/item_card.html
@@ -5,7 +5,7 @@
         <img src="{{ item.image.url }}" alt="{{ item.name }}" class="card__image">
     </a>
     <div class="card__body">
-        <a class="card__title link" target="_blank">{{ item.title }}</a>
+        <a href="{% url "single" item.id %}" class="card__title link" target="_blank">{{ item.title }}</a>
         <ul class="card__items">
             {% for tag in item.tags.all %}
                 <li class="card__item">
@@ -14,15 +14,13 @@
             {% endfor %}
         </ul>
         <div class="card__items card__items_column">
-            <p class="card__text">
-                <span class="icon-time"></span> {{ item.cooktime }} мин.</p>
+            <p class="card__text"><span class="icon-time"></span> {{ item.cooktime }} мин.</p>
             <p class="card__text"><span class="icon-user"></span> 
                 <a href="{% url "author_recipes" item.author.username %}" style="color: black">{{ item.author.username }}</a>
             </p>
         </div>
     </div>
     <div class="card__footer">
-
         {% include "includes/add_to_cart.html" %}
         {% include "includes/add_to_favorites.html" %}
     </div>
