--- a/foodster/recipes/templates/includes/add_to_cart.html
+++ b/foodster/recipes/templates/includes/add_to_cart.html
@@ -1,10 +1,19 @@
 {% load sub_funcs %}
-{% if user.is_authenticated and request|is_listed:item %}
-    <button class="button button_style_light-blue-outline" name="purchases">
-        <span class="icon-check button__icon"></span>Убрать из покупок
-    </button>
+
+{% if user.is_authenticated %}
+    {% if request|is_listed:item %}
+        <button class="button button_style_light-blue-outline" name="purchases">
+            <span class="icon-check button__icon"></span>Убрать из покупок
+        </button>
+    {% else %}
+        <button class="button button_style_light-blue" name="purchases" data-out>
+            <span class="icon-plus button__icon"></span>Добавить в покупки
+        </button>
+    {% endif %}
 {% else %}
-    <button class="button button_style_light-blue" name="purchases" data-out>
-        <span class="icon-plus button__icon"></span>Добавить в покупки
-    </button>
+    <a href="{% url "login" %}">
+        <button class="button button_style_light-blue" name="purchases" data-out>
+            <span class="icon-plus button__icon"></span>Добавить в покупки
+        </button>
+    </a>
 {% endif %}
