--- a/foodster/recipes/templates/shop_list.html
+++ b/foodster/recipes/templates/shop_list.html
@@ -24,7 +24,7 @@
                                     class="icon-time"></span> {{ item.cooktime }}
                                 мин.</p>
                         </div>
-                        <a href="{% url "remove_from_cart" item.id %}" class="shopping-list__button link">убрать из покупок</a>
+                        <a href="{% url "remove_from_cart" item.id %}" class="shopping-list__button link">Удалить</a>
                     </li>
                 {% endfor %}
             </ul>
