--- a/foodster/recipes/templates/index.html
+++ b/foodster/recipes/templates/index.html
@@ -14,7 +14,7 @@
                 {% include "includes/item_card.html" with item=item %}
             {% endfor %}
         </div>
-        {% if page %}
+        {% if page and paginator.count >= 6 %}
             {% include "includes/pagination.html" with items=page paginator=paginator %}
         {% endif %}
     
