--- a/foodster/users/templates/includes/user_form.html
+++ b/foodster/users/templates/includes/user_form.html
@@ -8,7 +8,7 @@
         {{ field|addclass:"form__input" }} 
 
         {% if field.help_text %} 
-          <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small> 
+          <small id="{{ field.id_for_label }}-help" class="form__info-text text-muted">{{ field.help_text|safe }}</small> 
        
         {% endif %} 
         <span class="form__error">{{ field.errors }}</span>
