--- a/foodster/users/templates/registration/password_reset_form.html
+++ b/foodster/users/templates/registration/password_reset_form.html
@@ -2,7 +2,7 @@
 {% load user_filters %}
 {% load static %}
 {% block main_css %}/static/pages/form.css{% endblock %}
-{% block title %}Восстановить пароль пароль{% endblock %}
+{% block title %}Восстановить пароль{% endblock %}
 {% block header %}
     <h1 class="main__title">Восстановление пароля</h1>
 {% endblock %}
@@ -11,7 +11,6 @@
             <form class="form" method="post">
                 {% csrf_token %}
                 {% include 'includes/user_form.html' %}
-
                 <div class="form__footer">
                     <button class="button button_style_blue">Сбросить пароль</button>
                 </div>
