--- a/foodster/recipes/templates/form_recipe.html
+++ b/foodster/recipes/templates/form_recipe.html
@@ -50,7 +50,9 @@
 
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                    <span class="form__error">{{ form.ingredients.errors }}</span>
+                    {% if ingredients_count == 0 %}
+                        <span class="form__error">Добавьте ингредиенты</span>
+                    {% endif %}
                 </div>
             </div>
             <div class="form__group">
