--- a/foodster/recipes/templates/form_recipe.html
+++ b/foodster/recipes/templates/form_recipe.html
@@ -50,7 +50,7 @@
 
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                    {% if ingredients_count == 0 %}
+                    {% if ingredients_count %}
                         <span class="form__error">Добавьте ингредиенты</span>
                     {% endif %}
                 </div>
